--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.2",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "vue-axios": "^3.2.5",
+    "vue-dragscroll": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
@@ -27,6 +30,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
     "node-sass": "^4.12.0",
+    "normalize.css": "^8.0.1",
     "sass-loader": "^8.0.2"
   },
   "eslintConfig": {
